--- a/ios/PicGuard.xcodeproj/xcshareddata/xcschemes/free.xcscheme
+++ b/ios/PicGuard.xcodeproj/xcshareddata/xcschemes/free.xcscheme
@@ -14,26 +14,26 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "33CC10EC2044A3C60003C045"
+               BlueprintIdentifier = "97C146ED1CF9000F007C117D"
                BuildableName = "PicGuard.app"
-               BlueprintName = "PicGuardMac"
-               ReferencedContainer = "container:PicGuardMac.xcodeproj">
+               BlueprintName = "PicGuard"
+               ReferencedContainer = "container:PicGuard.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Debug-free"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "33CC10EC2044A3C60003C045"
+            BlueprintIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "PicGuard.app"
-            BlueprintName = "PicGuardMac"
-            ReferencedContainer = "container:PicGuardMac.xcodeproj">
+            BlueprintName = "PicGuard"
+            ReferencedContainer = "container:PicGuard.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <Testables>
@@ -42,16 +42,16 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "331C80D4294CF70F00263BE5"
-               BuildableName = "PicGuardMacTests.xctest"
-               BlueprintName = "PicGuardMacTests"
-               ReferencedContainer = "container:PicGuardMac.xcodeproj">
+               BlueprintIdentifier = "331C8080294A63A400263BE5"
+               BuildableName = "PicGuardTests.xctest"
+               BlueprintName = "PicGuardTests"
+               ReferencedContainer = "container:PicGuard.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Debug-free"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -65,15 +65,15 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "33CC10EC2044A3C60003C045"
+            BlueprintIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "PicGuard.app"
-            BlueprintName = "PicGuardMac"
-            ReferencedContainer = "container:PicGuardMac.xcodeproj">
+            BlueprintName = "PicGuard"
+            ReferencedContainer = "container:PicGuard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Profile"
+      buildConfiguration = "Release-free"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -82,18 +82,18 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "33CC10EC2044A3C60003C045"
+            BlueprintIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "PicGuard.app"
-            BlueprintName = "PicGuardMac"
-            ReferencedContainer = "container:PicGuardMac.xcodeproj">
+            BlueprintName = "PicGuard"
+            ReferencedContainer = "container:PicGuard.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Debug-free">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Release-free"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
