--- a/macos/Flutter/Flutter-Release.xcconfig
+++ b/macos/Flutter/Flutter-Release.xcconfig
@@ -1,2 +1,2 @@
-#include? "Pods/Target Support Files/Pods-PicGuardMac/Pods-PicGuardMac.release.xcconfig"
+#include? "Pods/Target Support Files/Pods-PicGuardMac/Pods-PicGuardMac.release-free.xcconfig"
 #include "ephemeral/Flutter-Generated.xcconfig"
