--- a/macos/Podfile
+++ b/macos/Podfile
@@ -4,11 +4,11 @@ platform :osx, '10.15'
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'PicGuardMac', {
-  'Debug' => :debug,
+  'Debug-free' => :debug,
   'Debug-pro' => :debug,
-  'Profile' => :release,
+  'Profile-free' => :release,
   'Profile-pro' => :release,
-  'Release' => :release,
+  'Release-free' => :release,
   'Release-pro' => :release,
 }
 
