--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -435,6 +435,9 @@ jobs:
       - name: Build flutter
         run: flutter build web --dart-define-from-file=.env --target lib/main_free.dart --base-href /play/
 
+      - name: Copy files to flutter web
+        run: cp LICENSE README.md ./build/web
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
