--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ environment:
   flutter: '>=3.29.0'
 
 dependencies:
-  app_settings: # e1d39e4ea052e9dd9a47fbab49737846d9b43264
-    path: ./plugins/app_settings
+  app_settings:
+    git:
+      url: https://github.com/spencerccf/app_settings
+      ref: master
   cupertino_icons: ^1.0.8
   device_info_plus: ^11.3.2
   file_picker: ^9.0.2
@@ -40,8 +42,7 @@ dependencies:
   gap: ^3.0.1
   get: ^4.7.2
   get_storage: ^2.1.1
-  image_gallery_saver: #8c6480bf3a07834df89525e7ac6e0196ec701f73
-    path: ./plugins/image_gallery_saver
+  image_gallery_saver_plus: ^4.0.0-0.alpha
   image_picker: ^1.1.2
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
