--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,8 @@ analyzer:
     - lib/**/*.freezed.dart
     - lib/**/*.g.dart
     - lib/**/*.gen.dart
+    - lib/generated/**
+    - lib/i18n/**
 
 linter:
   # The lint rules applied to this project can be customized in the
