--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_easyloading: ^3.0.5
   flutter_form_builder: ^10.0.0
+  flutter_gen: ^5.10.0
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.4.5
@@ -60,6 +61,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.15
+  flutter_gen_runner: ^5.10.0
   flutter_test:
     sdk: flutter
   husky: ^0.1.7
