fix: update the run configurations for IntelliJ platforms and VS Code

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,9 @@
       "program": "lib/main_free.dart",
       "args": [
         "--dart-define-from-file",
-        ".env.dev.local"
+        ".env.dev.local",
+        "--flavor",
+        "free"
       ]
     },
     {
@@ -57,7 +59,9 @@
       "program": "lib/main_free.dart",
       "args": [
         "--dart-define-from-file",
-        ".env.dev.local"
+        ".env.dev.local",
+        "--flavor",
+        "free"
       ]
     },
     {
