fix: copy LICENSE to the windows folder

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2231,6 +2231,9 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+
       - name: Install yq
         shell: pwsh
         run: |
@@ -2346,6 +2349,9 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+
       - name: Install yq
         shell: pwsh
         run: |
@@ -2460,6 +2466,9 @@ jobs:
           ENV: ${{ github.event.inputs.env }}
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
+
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
 
       - name: Install yq
         shell: pwsh
@@ -2581,11 +2590,8 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
 
-      #      - name: Compile .iss to .exe installer
-      #        uses: Minionguyjpro/Inno-Setup-Action@v1.2.4
-      #        with:
-      #          path: windows/packaging/exe/inno_setup.iss
-      #          options: /O+
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
 
       - name: Copy ChineseSimplified.isl to C:\Program Files (x86)\Inno Setup 6\Languages\
         run: |
@@ -2708,6 +2714,9 @@ jobs:
           ENV: ${{ github.event.inputs.env }}
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64_WINDOWS }}
+
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
 
       - name: Install flutter_distributor
         run: dart pub global activate flutter_distributor
