--- a/.github/workflows/test-windows-msi.yml
+++ b/.github/workflows/test-windows-msi.yml
@@ -72,6 +72,9 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64_WINDOWS }}
 
+      - name: copy LICENSE to the windows folder
+        run: Copy-Item -Path "$pwd\LICENSE" -Destination "$pwd\windows\" -Force
+
       - name: Install flutter dependencies
         run: flutter pub get
 
