--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,10 +47,10 @@ dependencies:
   image_picker: ^1.1.2
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
+  multi_image_picker_view: ^2.0.1
   package_info_plus: ^8.3.0
   permission_handler: ^11.4.0
   photo_view: ^0.15.0
-  reorderables: ^0.6.0
   sentry_flutter: ^8.13.2
   sentry_logging: ^8.13.2
   shared_preferences: ^2.5.2
@@ -58,6 +58,7 @@ dependencies:
   syncfusion_flutter_sliders: ^28.2.9
   synchronized: ^3.3.1
   url_launcher: ^6.3.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   build_runner: ^2.4.15
