--- a/.github/workflows/test-macos-tar.yml
+++ b/.github/workflows/test-macos-tar.yml
@@ -7,7 +7,7 @@ on:
 permissions: read-all
 
 jobs:
-  macos_tar:
+  macos-tar:
     name: Create macos tar (free)
     runs-on: macos-14
     steps:
