--- a/.github/workflows/test-windows-msix-pro.yml
+++ b/.github/workflows/test-windows-msix-pro.yml
@@ -7,7 +7,7 @@ on:
 permissions: read-all
 
 jobs:
-  get_version:
+  get-version:
     name: Create release
     runs-on: ubuntu-22.04
     outputs:
@@ -29,7 +29,7 @@ jobs:
     name: Create msix (pro)
     runs-on: windows-2022
     needs:
-      - get_version
+      - get-version
     steps:
       - uses: actions/checkout@v4
 
@@ -105,7 +105,7 @@ jobs:
         run: |
           dart run msix:create --build-windows false --output-name "picguard_$env:VERSION`-pro_windows_x64"
         env:
-          VERSION: ${{ needs.get_version.outputs.version }}
+          VERSION: ${{ needs.get-version.outputs.version }}
 
       # Package the build.
       - name: Copy build for msix
