--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.1.2
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
+  menu_bar: ^0.5.3
   multi_image_picker_view: ^3.0.0
   package_info_plus: ^8.3.0
   permission_handler: ^11.4.0
